# APPM

./: AppmSolver.cpp  AppmSolver.h  AppmSolverParams.txt  CMakeLists.txt  Cell.cpp  Cell.h  DualMesh.cpp  DualMesh.h  Edge.cpp  Edge.h  Edge2.cpp  Edge2.h  EigenAuxiliaries.h  Face.cpp  Face.h  FluidSolver.cpp  FluidSolver.h  GeometryItem.cpp  GeometryItem.h  H5Reader.cpp  H5Reader.h  H5Writer.cpp  H5Writer.h  Interpolator.cpp  Interpolator.h  Main.cpp  Main.h  MaxwellSolver.cpp  MaxwellSolver.h  MaxwellSolverCrankNicholson.cpp  MaxwellSolverCrankNicholson.h  MaxwellSolverImplicitEuler.cpp  MaxwellSolverImplicitEuler.h  MaxwellSolverLeapFrog.cpp  MaxwellSolverLeapFrog.h  Mesh.cpp  Mesh.h  MultiFluidSolver.cpp  MultiFluidSolver.h  Numerics.cpp  (+34 more)
